2008-06-10  Nicolas François  <nicolas.francois@centraliens.net>

	* src/pwck.c: Use a bool when possible instead of int integers.
	* src/pwck.c: Ignore return value of setlocale(),
	bindtextdomain(), and textdomain().

2008-06-10  Nicolas François  <nicolas.francois@centraliens.net>

	* src/passwd.c: Use a bool when possible instead of int integers.
	* src/passwd.c: Avoid assignments in comparisons.
	* src/passwd.c: Add brackets and parenthesis.
	* src/passwd.c: Avoid implicit conversion of pointers / integers /
	chars to booleans.
	* src/passwd.c: Move the "context_t c" declaration at the
	beginning check_selinux_access.
	* src/passwd.c: Ignore return value of setlocale(),
	bindtextdomain(), and textdomain().

2008-06-10  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupmod.c: Use a bool when possible instead of int
	integers.
	* src/groupmod.c: Avoid assignments in comparisons.
	* src/groupmod.c: Add brackets and parenthesis.
	* src/groupmod.c: Avoid implicit conversion of pointers / integers
	/ chars to booleans.
	* src/groupmod.c: Use a %lu format to print GIDs, and cast the GID
	to (unsigned long int).
	* src/groupmod.c: Ignore return value of setlocale(),
	bindtextdomain(), and textdomain().
	* src/groupmod.c: Ignore the return value of pam_end() before
	exiting.

2008-06-09  Nicolas François  <nicolas.francois@centraliens.net>

	* src/su.c: Ignore return value of setlocale(),
	bindtextdomain(), and textdomain().

2008-06-09  Nicolas François  <nicolas.francois@centraliens.net>

	* src/useradd.c: Use a bool when possible instead of int integers.
	* src/useradd.c: Avoid implicit conversion of pointers / integers
	/ chars to booleans.
	* src/useradd.c: Add brackets and parenthesis.
	* src/useradd.c: Avoid assignments in comparisons.
	* src/useradd.c: Ignore the return value of fclose() for read-only
	files.
	* src/useradd.c: Ignore the return value of fflush() before
	closing the files.
	* src/useradd.c: Avoid multi-statements lines.